# conways_game_of_life

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index.html  run_wasm.sh
.cargo/: config.toml
src/: game.rs  main.rs  ui.rs
