[package]
name = "conways_game_of_life"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "*", features = []}
bevy-inspector-egui = "0.19.0"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not >
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"

